# figipy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yaml
figipy/: __init__.py  core.py  error.py  range.py
tests/: test_core.py  test_range.py
