[tool.poetry]
name = "figipy"
version = "0.1.3"
description = "Unofficial Python API for OpenFIGI (https://www.openfigi.com/)"
authors = ["Thomas Kluiters <thomas.kluiters@gmail.com>"]
homepage = "https://github.com/ThomasKluiters/figipy"

[tool.poetry.dependencies]
python = "^3.8.6"
black = "^20.8b1"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
poetry = "^1.1.4"
pytest = "^6.2.0"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
